--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,8 +1,13 @@
-"version: 2.1" 
-"jobs:" 
-"  build:" 
-"    docker:" 
-"      - image: circleci/node:14" 
-"    steps:" 
-"      - checkout" 
-"      - run: echo 'Esegui i tuoi comandi qui'" 
+version: 2.1
+jobs:
+  build:
+    docker:
+      - image: circleci/node:14
+    steps:
+      - checkout
+      - run:
+          name: Install Dependencies
+          command: npm install
+      - run:
+          name: Run Tests
+          command: npm test
